
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int SOCKET ;


 int MAXBUF ;
 int printf (char*,char*,char*) ;
 int recv (int ,char*,int,int ) ;
 int send (int ,char*,int ,int ) ;
 int strlen (char*) ;
 char* strtok (char*,char*) ;

void send_smtpcmd(SOCKET sock,char *cmd)
{
    char reply[MAXBUF];
    int r;
    send(sock,cmd,strlen(cmd),0);
    r=recv(sock,reply,MAXBUF,0);
    reply[r]=0;
    printf("%-11s: %s\n",strtok(cmd,":"),reply);
}
